# rust-audio-lib-sample

./: README.md  step1.md  step2.md  step3.md  step4.md  step5.md  step6.md  step7.md  step8.md  step9.md
rust_audio_lib/: Cargo.toml  build.rs  compile.sh
rust_audio_lib/src/: get_default_device_id.c  get_default_device_id.cpp  lib.rs  main.rs  rust_audio_lib.h  sys.rs
rust_audio_lib/tests/: integration.rs
